# framefox

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README-DB.md  README-FORM.md  README-PYPI.md  README.md  TODO.txt  a faire.txt  app.db  article.md  call_terminal.py  create_table.py  interactive_terminal.py  main.py  main_test.py  pyproject.toml  remove.sh  requirements-tests.txt  requirements.txt  setup.py  task.txt  test.db
.config-py/: setup.cfg
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  help_request.md  performance_report.md  vulnerability_report.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  test.yml
config/: application.yaml  orm.yaml  security.yaml
docs/framefox/: QUICKLAUNCH_FIXES.md  README.md  astro.config.mjs  package-lock.json  package.json
docs/framefox/public/: index.html
examples/auth/: .gitignore  main.py  requirements.txt
examples/auth/config/: application.yaml  debug.yaml  mail.yaml  parameter.yaml  security.yaml  tasks.yaml
framefox/: MANIFEST.in  README.md  application.py  cli.py  setup.py
framefox/core/: kernel.py
framefox/framefox/: call_terminal.py  cli.py
framefox/framefox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
framefox/terminal/: command_handler.py  command_registry.py  terminal.py
migrations/: env.py  script.py.mako
src/: views.py
src/config/: application.yaml  orm.yaml  session.yaml
src/controllers/: admin_controller.py  home_controller.py  item_test_controler.py  item_test_controller.py  login_controller.py  product_controller.py  register_controller.py  role_admin_controller.py  role_user_controller.py  tata_controller.py  test_controller.py  toto_controller.py  user_controller.py  visitor_controller.py
src/core/: kernel.py  request.py  router.py
src/entity/: item_test.py  tata.py  toto.py  user.py
src/repository/: item_test_repository.py  tata_repository.py  toto_repository.py  user_repository.py
src/terminal/: command_handler.py  interactive_terminal.py  terminal.py
templates/: admin.html  base.html  login.html  register.html  role_admin.html  role_user.html  users.html  visitor.html
terminal/: argument_parser.py  command_handler.py  terminal.py
terminal/commands/: add_property_command.py  create_controller_command.py  create_crud_command.py  create_entity_command.py  help_command.py  orm_create_db_command.py  orm_migrate_db_command.py  unsupported_command.py
terminal/common/: database_url_parser.py  file_creator.py  input_manager.py  model_checker.py
terminal/templates/: entity_template.jinja2  repository_template.jinja2
(+539 files in other folders)
